0.7.3 (currently working on)
- [#2696] Change: Added a test for ensuring that no mails are sent when attendancesMin is 0
- [#2731] Fix: plugin.tx_seminars.allowRegistrationForEventsWithoutDate is called like a switch available in flexforms but it is not in flexforms
- [#2723] Fix: Registration crashes with fatal error if no foods are selected in the registration form
- [#2503] Change: Add some unit tests
- [#737] Fix: When FE-editing an existing event, don't change the crdate
- [#2705] Fix: Crash when saving an event in the FE

0.7.2 (released 2009-02-07)
- [#2620] Fix: seminar::getOrganizers destructs the organizers at the wrong place
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code
- [#2637] Fix: Tables rows in FE registration list not are on the same line

0.7.1 (released 2009-01-20)
- [#2154] Fix: Step counter shows "step 3 of 2" after failed submit attempt on page 2
- [#788] Fix: Use t3lib_div::trimExplode instead of explode
- [#2592] Fix: Fix a few typos in the unit tests
- [#1716] Fix: Make the CSV export work with multiline cells in Excel and OpenOffice.org
- [#2579] Fix: The user fields for export should be chosen from fe_user not tx_seminars_attendances
- [#2596] Fix: Use mb_strlen instead of strlen
- [#2503] Change: Add some unit tests
- [#2593] Change: Add some unit tests for the "my events" list
- [#2617] Fix: Some headings in the "my events" list are moved up
- [#2616] Fix: Invalid HTML in the list view
- [#2548] Fix: The owner image on the single view page should use the path that is configured in the sr_feuser_register EM settings
- [#2563] Fix: Deal with deleted FE users and seminars gracefully
- [#2458] Fix: Expect false for a failed $dbResult, not null
- [#1611] Change: Add guard clauses to objectfromdb::createMmRecords
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code