@@ -1,4 +1,5 @@
 0.7.3 (currently working on)
+- [#2724] Fix: Country list is not localized
 - [#2696] Change: Added a test for ensuring that no mails are sent when attendancesMin is 0
 - [#2731] Fix: plugin.tx_seminars.allowRegistrationForEventsWithoutDate is called like a switch available in flexforms but it is not in flexforms
 - [#2723] Fix: Registration crashes with fatal error if no foods are selected in the registration form
